--- a/frontend/MovieApp.WPF/App.xaml
+++ b/frontend/MovieApp.WPF/App.xaml
@@ -1,9 +1,36 @@
 ﻿<Application x:Class="MovieApp.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MovieApp.WPF"
+             xmlns:local="clr-namespace:MovieApp.WPF.Helpers"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
-         
+        <local:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+		<local:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+		<local:BoolToStarColorConverter x:Key="BoolToStarColorConverter" />
+        <Color x:Key="DarkBackgroundColor">#1E1E2F</Color>
+        <Color x:Key="AccentColor">#8A2BE2</Color>
+        <Color x:Key="TextColor">#FFFFFF</Color>
+        <SolidColorBrush x:Key="BackgroundBrush" Color="{StaticResource DarkBackgroundColor}" />
+        <SolidColorBrush x:Key="AccentBrush" Color="{StaticResource AccentColor}" />
+        <SolidColorBrush x:Key="TextBrush" Color="{StaticResource TextColor}" />
+
+
+        <Style TargetType="Window">
+            <Setter Property="Background" Value="{StaticResource BackgroundBrush}" />
+            <Setter Property="Foreground" Value="{StaticResource TextBrush}" />
+            <Setter Property="FontFamily" Value="Segoe UI" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="Padding" Value="8" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="Padding" Value="8" />
+            <Setter Property="Background" Value="{StaticResource AccentBrush}" />
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+        
     </Application.Resources>
 </Application>
